--- a/mahran/Day2/Date_practice/simple_oclock/index.html
+++ b/mahran/Day2/Date_practice/simple_oclock/index.html
@@ -22,6 +22,9 @@
   </head>
   <body onload="getFullTime()">
     <h4 class="date" id="fullDate"></h4>
+    <h4 class="date" id="de_Date"></h4>
+    <h4 class="date" id="ar_Date"></h4>
+    <h4 class="date" id="bn_Date"></h4>
     <div class="time" id="clock"></div>
     <script src="main.js"></script>
   </body>
